<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zillow App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="streetAddress">Street Address</string>
    <string name="streetAddressLabel">Street Address*:</string>
    <string name="city">City</string>
    <string name="cityLabel">City*:</string>
    <string name="button_send">Search</string>
    <string name="heading">Search Your Property Here</string>
    <string name="stateLabel">State*:</string>
    <string name="requiredField">This field is required!</string>
    <string name="enterState">Select a State</string>
	<string name="up_down">Up Down Arrow</string>
    
    <string-array name="states">
        <item>@string/enterState</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <string name="defaultString">N/A</string>
    <string name="title_activity_property_detail">Zillow Search Result</string>
    <string name="prevoius">Previous</string>
    <string name="next">Next</string>
    <string name="facebook_app_id">1555491911331292</string>
    <string name="fbshare">FB share</string>
	<string name="zillowCopyrightFirstLine">© Zillow, Inc., 2006-2014</string>
	<string name="zillowCopyrightSecondLine"><![CDATA[Use is subject to <a href="http://www.zillow.com/corp/Terms.htm">Terms of Use</a>]]></string>
	<string name="zillowCopyrightThirdLine"><![CDATA[<a href="http://www.zillow.com/zestimate/">What\'s a Zestimate?</a>]]></string>
	<string name="zillowlogo">Zillow Logo</string>
</resources>