<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zillowapp.MainActivity" >

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/heading"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/streetAddressLabel"
        style="@style/CodeFont"
        android:text="@string/streetAddressLabel" />

    <EditText
        android:id="@+id/streetAddress"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/textinput"
        android:hint="@string/streetAddress"
        android:inputType="text" />

    <TextView
        android:id="@+id/streetAddressError"
        style="@style/errorFont"
        android:text="@string/requiredField"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/cityLabel"
        style="@style/CodeFont"
        android:text="@string/cityLabel" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/textinput"
        android:hint="@string/city"
        android:inputType="text" />

    <TextView
        android:id="@+id/cityError"
        style="@style/errorFont"
        android:text="@string/requiredField"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/stateLabel"
        style="@style/CodeFont"
        android:text="@string/stateLabel" />

    <Spinner
        android:id="@+id/states"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/textinput"
        android:entries="@array/states"
        android:prompt="@string/enterState" />

    <TextView
        android:id="@+id/stateError"
        style="@style/errorFont"
        android:text="@string/requiredField"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/searchbutton"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:text="@string/button_send"
            android:textColor="#FFFFFF" />

        <View
        android:layout_width="45dp"
        android:layout_height="0dp" />

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/zillowlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".85"
            android:contentDescription="@string/zillowlogo"
            android:src="@drawable/zillowlogo"
            android:visibility="visible" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#DAFFFFFF" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/responseError"
        style="@style/errorFontServer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/server_error" />

</LinearLayout>