<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/propertyDetailsTab"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@id/fbShareButton"
        android:fillViewport="true" >
    </ListView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/zillowCopyrightFirstLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/zillowCopyrightFirstLine"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/zillowCopyrightSecondLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/zillowCopyrightFirstLine"
            android:gravity="center_horizontal"
            android:text="@string/zillowCopyrightSecondLine"
            android:textStyle="bold" 
            android:clickable="true"/>

        <TextView
            android:id="@+id/zillowCopyrightThirdLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zillowCopyrightSecondLine"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/zillowCopyrightThirdLine" />
    </RelativeLayout>

</RelativeLayout>